--- a/E-journal/Views/Home/Index.cshtml
+++ b/E-journal/Views/Home/Index.cshtml
@@ -13,9 +13,11 @@
     <table class="table">
         <thead>
         <tr>
-            <th scope="col">№ </th>
+            <th scope="col"># </th>
             <th scope="col">Название </th>
+            <th scope="col">Специльность </th>
             <th scope="col">Куратор </th>
+            <th scope="col">Год </th>
             <th scope="col">Курс</th>
         </tr>
         </thead>
@@ -26,7 +28,9 @@
             <tr class="table-info">
                 <td>@group.Id</td>
                 <td>@group.Name</td>
+                <td>@group.Specialization</td>
                 <td>@group.Curator</td>
+                <td>@group.Year</td>
                 <td>@group.Course.CourseNumber</td>
             </tr>
         }
