Добавление нужных сервисов для создания группы

--- a/E-journal/Views/Group/GroupView.cshtml
+++ b/E-journal/Views/Group/GroupView.cshtml
@@ -20,7 +20,7 @@
         </thead>
         <tbody>
 
-            @foreach (var student in Model.Students)
+            @foreach (var student in Model.StudentsList)
             {
                 <tr class="table-info">
                     <td>@student.Name</td>
