--- a/E-journal/Views/_ViewImports.cshtml
+++ b/E-journal/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using E_journal
 @using E_journal.Models
+@using E_journal.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
