--- a/E-journal/Views/Student/Edit.cshtml
+++ b/E-journal/Views/Student/Edit.cshtml
@@ -4,6 +4,7 @@
     string formMethod = "CreateStudent";
     if (Model.Id != 0)
     {
+        ViewData["Title"] = "Редактирование студента";
         formMethod = "EditStudent";
     }
 }
@@ -11,7 +12,7 @@
 <div class="container">
     <div class="modal-content">
         <div class="modal-header">
-            <h6>Создание студента</h6>
+            <h6>@ViewData["Title"]</h6>
             <button class="close" data-dismiss="modal" area-hidden="true"><i class="bi bi-x-circle"></i></button>
         </div>
         <div class="modal-body">
