--- a/E-journal/Views/Teacher/TeacherList.cshtml
+++ b/E-journal/Views/Teacher/TeacherList.cshtml
@@ -7,39 +7,39 @@
     <h1 class="display-4">Список преподавателей</h1>
 </div>
 <div class="d-grid gap-2 d-md-flex justify-content-md-end p-3">
-    <a href="@Url.Action("CreateTeacher", "Teacher")" class="btn btn-outline-dark" id="AddTeacher"><i class="bi bi-plus-circle"></i>   Добавить преподавателя</a> @*Кнопка добавить*@
+    <a href="@Url.Action("CreateTeacher", "Teacher")" class="btn btn-outline-dark modalForm" id="AddTeacher"><i class="bi bi-plus-circle"></i>   Добавить преподавателя</a> @*Кнопка добавить*@
 </div>
 <div class="row">
     <table class="table">
         <thead>
-            <tr>
-                <th scope="col"># </th>
-                <th scope="col">ФИО </th>
-                <th scope="col">Дисциплина </th>
-                <th scope="col"></th>
-            </tr>
+        <tr>
+            <th scope="col"># </th>
+            <th scope="col">ФИО </th>
+            <th scope="col">Дисциплина </th>
+            <th scope="col"></th>
+        </tr>
         </thead>
         <tbody>
-            @foreach (var teacher in Model.Teachers)
-            {
-                <tr class="table-info">
-                    <td>@teacher.Id</td>
-                    <td>@teacher.Name</td>
-                    <td>@teacher.Discipline</td>
-                    <td><a href="@Url.Action("EditTeacher","Teacher",new{Id=teacher.Id})" id="EditTeacher" class="btn btn-outline-dark"><i class="bi bi-pencil"></i></a></td>
-                </tr>
-            }
-
+        @foreach (var teacher in Model.Teachers)
+        {
+            <tr class="table-info">
+                <td>@teacher.Id</td>
+                <td>@teacher.Name</td>
+                <td>@teacher.Discipline</td>
+                <td><a href="@Url.Action("EditTeacher","Teacher",new{Id=teacher.Id})" class="btn btn-outline-dark modalForm"><i class="bi bi-pencil"></i></a></td>
+            </tr>
+        }
         </tbody>
     </table>
-
 
 </div>
 
 @*//Для модального окна*@
+
 <div id="modDialog" class="modal fade">
     <div id="dialogContent" class="modal-dialog"></div>
 </div>
+
 @section scripts
 {
     <script type="text/javascript">
@@ -47,7 +47,7 @@
         $(function () {
             $.ajaxSetup({ cache: false });
             /**/
-            $("#EditTeacher").click(function (e) {
+            $(".modalForm").click(function (e) {
 
                 e.preventDefault();
                 $.get(this.href, function (data) {
@@ -58,20 +58,5 @@
             /**/
         })
     </script>
-
-
-    <script type="text/javascript">
-
-        $(function () {
-            $.ajaxSetup({ cache: false });
-            $("#AddTeacher").click(function (e) {
-
-                e.preventDefault();
-                $.get(this.href, function (data) {
-                    $('#dialogContent').html(data);
-                    $('#modDialog').modal('show');
-                });
-            });
-        })
-    </script>
+    
 }
