--- a/E-journal/Views/Student/Edit.cshtml
+++ b/E-journal/Views/Student/Edit.cshtml
@@ -35,7 +35,7 @@
                 <div class="form-group">
                     <label>Фото <i class="bi bi-person-square"></i></label>
                     <div class="input-group mb-3">
-                        <input type="file" name="uploadedFile" accept="image/*" required />
+                        <input type="file" name="uploadedFile" accept="image/*" />
                     </div>
                 </div>
 
