--- a/E-journal/Views/Student/StudentView.cshtml
+++ b/E-journal/Views/Student/StudentView.cshtml
@@ -11,8 +11,10 @@
     <p>Группа: @Model.Group.Name</p>
     <p>Номер телефона: @Model.PhoneNumber</p>
     <p>Возраст: @Model.Age</p>
+    <p>Электронная почта: @Model.Email</p>
     <div>
         <img src="/Student/Photo/@Model.PhotoName"/>
+
     </div>
 
 </div>
