--- a/E-journal/Views/Student/Edit.cshtml
+++ b/E-journal/Views/Student/Edit.cshtml
@@ -34,6 +34,7 @@
                 <div class="form-group">
                     <label>Адресс электронной почты:</label>
                     @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Email)
                 </div>
                 <div class="form-group">
                     <label>Фото <i class="bi bi-person-square"></i></label>
