--- a/E-journal/Views/Group/GroupView.cshtml
+++ b/E-journal/Views/Group/GroupView.cshtml
@@ -35,7 +35,7 @@
 </div>
 
 @*//Для модального окна*@
-<div id="modDialog" class="modal fade">
+@*<div id="modDialog" class="modal fade">
     <div id="dialogContent" class="modal-dialog"></div>
 </div>
 @section scripts
@@ -70,4 +70,4 @@
         })
     </script>
 
-}
+}*@
