--- a/E-journal/Views/Student/StudentView.cshtml
+++ b/E-journal/Views/Student/StudentView.cshtml
@@ -18,7 +18,7 @@
     </div>
 
 </div>
-<div id="modDialog" class="modal fade">
+@*<div id="modDialog" class="modal fade">
     <div id="dialogContent" class="modal-dialog"></div>
 </div>
 
@@ -38,4 +38,4 @@
             });
         })
     </script>
-}
+}*@
