--- a/E-journal/Views/Student/Edit.cshtml
+++ b/E-journal/Views/Student/Edit.cshtml
@@ -2,8 +2,10 @@
 @{
     ViewData["Title"] = "Создание студента";
     string formMethod = "CreateStudent";
+    string req = "required";
     if (Model.Id != 0)
     {
+        req = "";
         ViewData["Title"] = "Редактирование студента";
         formMethod = "EditStudent";
     }
@@ -13,34 +15,38 @@
     <div class="modal-content">
         <div class="modal-header">
             <h6>@ViewData["Title"]</h6>
-            <button class="close" data-dismiss="modal" area-hidden="true"><i class="bi bi-x-circle"></i></button>
+            @*<button class="close" data-dismiss="modal" area-hidden="true"><i class="bi bi-x-circle"></i></button>*@
         </div>
         <div class="modal-body">
-            @using (Html.BeginForm(formMethod, "Student", FormMethod.Post,new { enctype = "multipart/form-data" }))
+            @using (Html.BeginForm(formMethod, "Student", FormMethod.Post, new { enctype = "multipart/form-data" }))
             {
-                @Html.HiddenFor(model=>model.GroupId)
-                @Html.HiddenFor(model=>model.PhotoName)
-                <div class="form-group">
-                    <label>ФИО</label>
-                    @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
-                </div>
-                <div class="form-group">
-                    <label>Номер телефона</label>
-                    @Html.TextBoxFor(model => model.PhoneNumber, new { @class = "form-control" })
-                </div>
-                <div class="form-group">
-                    <label>Возраст</label>
-                    @Html.TextBoxFor(model => model.Age, new { @class = "form-control", type = "number", min = "15", max = "99" })
-                </div>
+                @Html.HiddenFor(model => model.GroupId)
+                @Html.HiddenFor(model => model.PhotoName)
+                @Html.ValidationSummary(true)
+            <div class="form-group">
+                <label>ФИО</label>
+                @Html.TextBoxFor(model => model.Name, new { @class = "form-control", required = "required" })
+                @Html.ValidationMessageFor(model => model.Name, "Не введено ФИО", new { @class = "text-danger" })
+            </div>
+            <div class="form-group">
+                <label>Номер телефона</label>
+                @Html.TextBoxFor(model => model.PhoneNumber, new { @class = "form-control", required = "required" })
+                @Html.ValidationMessageFor(model => model.PhoneNumber, "Не введён номер телефона", new { @class = "text-danger" })
+            </div>
+            <div class="form-group">
+                <label>Возраст</label>
+                @Html.TextBoxFor(model => model.Age, new { @class = "form-control", type = "number", min = "15", max = "99" })
+                @Html.ValidationMessageFor(model => model.Age, "Не введён возраст", new { @class = "text-danger" })
+            </div>
                 <div class="form-group">
                     <label>Адресс электронной почты:</label>
-                    @Html.TextBoxFor(model => model.Email, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Email)
+                    @Html.TextBoxFor(model => model.Email, new { @class = "form-control", required = "required" })
+                    @Html.ValidationMessageFor(model => model.Email, "Не введён адрес электронной почты", new { @class = "text-danger" })
                 </div>
                 <div class="form-group">
                     <label>Фото <i class="bi bi-person-square"></i></label>
                     <div class="input-group mb-3">
-                        <input type="file" name="uploadedFile" accept="image/*" />
+                        <input type="file" name="uploadedFile" accept="image/*" @req />
                     </div>
                 </div>
 
@@ -49,7 +55,7 @@
                 </div>
 
             }
-          
+
         </div>
     </div>
 </div>
